<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="rajivbhawanapp.rajivbhawan.com.rajivbhawan.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rajiv Bhawan"
        android:textColor="#270cf5"
        android:textSize="32sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/electricity_complaint"
        android:layout_weight="1"
        android:text="@string/electricity_complaint"/>
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/plumber_complaint"
        android:layout_weight="1"
        android:text="@string/carpenter_complaint"/>
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/mess_complaint"
        android:layout_weight="1"
        android:text="@string/mess_complaint"/>
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/other_complaint"
        android:layout_weight="1"
        android:text="@string/other_complaint"/>
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/important_contacts"
        android:layout_weight="1"
        android:text="@string/important_contacts"/>
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/website_url"
        android:layout_weight="1"
        android:text="@string/official_website"/>

</LinearLayout>
